[tool.poetry]
name = "anyq"
version = "0.1.0"
description = ""
authors = ["walid <walid.sa3d@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.9"
confluent-kafka = "^2.3.0"
redis = "^5.0.3"
pika = "^1.3.2"
testcontainers = {extras = ["kafka"], version = "^4.4.0"}
kafka-python-ng = "^2.2.2"



[tool.poetry.group.tests.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pytest-sugar = "^1.0.0"
testcontainers = {extras = ["kafka","redis","rabbitmq"], version = "^4.4.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
